--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,27 @@
-# MoodMart - Feel. Find. Shop.
-# Git Ignore File for Security
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Environment Variables (IMPORTANT: Keep credentials secure)
+# Production builds
+build/
+dist/
+
+# Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Dependencies
-node_modules/
-/.pnp
-.pnp.js
-
-# Production Build
-/build
-/dist
-
-# Testing
-/coverage
-
-# IDE and Editor Files
+# IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
-# OS Generated Files
+# OS generated files
 .DS_Store
 .DS_Store?
 ._*
@@ -37,23 +31,23 @@ ehthumbs.db
 Thumbs.db
 
 # Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
+logs
+*.log
 
-# Runtime Data
+# Runtime data
 pids
 *.pid
 *.seed
 *.pid.lock
 
+# Coverage directory used by tools like istanbul
+coverage/
+
 # Firebase
 .firebase/
 firebase-debug.log
-firestore-debug.log
 
-# Python (for mood detection server)
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
@@ -63,25 +57,6 @@ env/
 venv/
 ENV/
 
-# Temporary Files
+# Temporary files
 *.tmp
 *.temp
-
-# Security Keys
-*.pem
-*.key
-*.p12
-*.pfx
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# Cache
-.cache/
-.parcel-cache/
-
-# Misc
-*.tgz
-*.tar.gz
