--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "moodmart",
   "version": "1.0.0",
   "description": "MoodMart - Feel. Find. Shop. AI-powered mood detection with personalized shopping",
-  "main": "server.js",
   "scripts": {
     "start": "react-scripts start",
-    "dev": "nodemon server.js",
-    "client": "cd client && npm start",
-    "server": "nodemon server.js",
-    "build": "cd client && npm run build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -23,20 +21,9 @@
     "firebase": "^9.9.0",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4",
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "cors": "^2.8.5",
     "axios": "^1.5.0",
-    "multer": "^1.4.5",
-    "sharp": "^0.32.5",
-    "node-cron": "^3.0.2",
-    "mongoose": "^7.5.0",
-    "dotenv": "^16.3.1",
     "@tensorflow/tfjs": "^4.10.0",
     "face-api.js": "^0.22.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   },
   "browserslist": {
     "production": [
