--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "firebase": "^9.9.0",
     "sweetalert": "^2.1.2",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4",
     "axios": "^1.5.0",
     "@tensorflow/tfjs": "^4.10.0",
