feat: Add comprehensive README, security files, and environment configuration
- Add professional README.md with complete documentation
- Create .gitignore for security and dependency management
- Add .env.example template for environment variables
- Secure Firebase.js with environment variables
- Update project structure and add screenshots section

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,13 @@
-# MoodMart Environment Variables
-# Feel. Find. Shop. - AI-Powered E-commerce Platform
-# Developer: Abhishek Giri (abhishekgiri04@gmail.com)
+# Firebase Configuration Template
+# Copy this file to .env and fill in your actual values
+# Never commit .env file to version control
 
-# Firebase Configuration
-REACT_APP_FIREBASE_API_KEY=AIzaSyB38dn2a8NK9XrMJewlxqnEbcDHYB9FQQ0
-REACT_APP_FIREBASE_AUTH_DOMAIN=moodmart-66.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=moodmart-66
-REACT_APP_FIREBASE_STORAGE_BUCKET=moodmart-66.firebasestorage.app
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=804296045171
-REACT_APP_FIREBASE_APP_ID=1:804296045171:web:09423faec26101b0f03006
-REACT_APP_FIREBASE_MEASUREMENT_ID=G-JLSBB1T8RV
+REACT_APP_FIREBASE_API_KEY=your_api_key_here
+REACT_APP_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=your_project_id
+REACT_APP_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+REACT_APP_FIREBASE_APP_ID=your_app_id
 
-# Backend Server (Mood Detection)
-REACT_APP_BACKEND_URL=http://localhost:8080
-
-# Product APIs
-REACT_APP_PRODUCTS_API=https://fakestoreapi.com/products
-REACT_APP_AMAZON_API=https://www.amazon.in/s?k=
-REACT_APP_FLIPKART_API=https://www.flipkart.com/search?q=
-REACT_APP_MYNTRA_API=https://www.myntra.com/
-
-# App Configuration
-REACT_APP_NAME=MoodMart
-REACT_APP_VERSION=1.0.0
-REACT_APP_DEVELOPER=Abhishek Giri
-REACT_APP_CONTACT=abhishekgiri04@gmail.com
+# Optional: Analytics
+REACT_APP_FIREBASE_MEASUREMENT_ID=your_measurement_id
